# rust-full-stack-with-auth-template

./: .gitignore  Cargo.toml  README.md
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs
crates/frontend/: Cargo.toml  index.html  tailwind.config.js
crates/frontend/src/: main.rs
crates/frontend/src/app/: mod.rs
crates/frontend/src/app/auth/: loginform.rs  mod.rs  register.rs  registerform.rs
crates/frontend/src/auth/: mod.rs  register.rs
crates/frontend/src/components/: chat_window.rs  error_message.rs  footer.rs  header.rs  input.rs  mod.rs  user_context_provider.rs  user_info_panel.rs  users_table.rs
crates/frontend/src/components/auth/: admin_route.rs  adminroute.rs  login_form.rs  loginform.rs  mod.rs  protected_route.rs  protectedroute.rs  register_form.rs  registerform.rs  request_reset_form.rs  reset_form.rs
crates/frontend/src/components/buttons/: button.rs  external_button.rs  externalbutton.rs  mod.rs  nav_button.rs  navbutton.rs
crates/frontend/src/components/graphics/: mod.rs
crates/frontend/src/components/icons/: mod.rs  send_icon.rs
crates/frontend/src/graphics/: ferris.rs  mod.rs
crates/frontend/src/hooks/: mod.rs  use_user_context.rs
crates/frontend/src/services/: auth.rs  mod.rs  user.rs  web_socket.rs
crates/frontend/src/theme/: theme.rs
crates/frontend/src/views/: admin_view.rs  chat.rs  home.rs  login.rs  mod.rs  not_found.rs  notfound.rs  register.rs  request_reset.rs  reset.rs  user_view.rs
crates/server/: Cargo.toml
crates/server/resources/: reset_template.html
crates/server/src/: main.rs  pool.rs
crates/server/src/controllers/: auth_controller.rs  mod.rs  users_controller.rs  ws_controller.rs
crates/server/src/middleware/: mod.rs  token_athentication.rs  token_authentication.rs
crates/server/src/strategies/: authentication.rs  mod.rs  users.rs
crates/tauri/: tauri.conf.json
crates/types/: Cargo.toml
crates/types/src/: auth.rs  user.rs
migrations/: 20231214145144_InitialMigration.up.sql
migrations/postgres/: 20231214145144_InitialMigration.up.sql
migrations/sqlite/: 20231214145144_InitialMigration.up.sql
