[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.114"
reqwest = { version = "0.11", features = ["json"] }
yew = { version = "0.20.0", features = ["csr"] }
yewdux = "0.9.3"
yew-router = "0.17.0"
yew-hooks = "0.2.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
js-sys = "0.3"
web-sys = "0.3"
gloo-console = "0.3.0"
tauri-sys = { git = "https://github.com/JonasKruckenberg/tauri-sys", features = ["all"] }

types = { path = "../types" }
