[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5"
tower-http = { version = "0.2", features = ["cors"] }
tokio = { version = "1.0", features = ["full"] }
serde = "1"

types = { path = "../types", features = ["sqlx"] }
dotenv = "0.15.0"
sqlx = { version = "0.7.3", features = ["postgres"] }
once_cell = "1.19.0"
