[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
reqwest = "0.11.26"
serde = "1"
serde_json = "1.0.114"
sqlx = { version = "~0.5.7", optional = true }

[features]
sqlx = ["dep:sqlx"]
